--- a/style.css
+++ b/style.css
@@ -89,11 +89,11 @@ header {
   grid-template-areas:
     "carta img ."
     "p1 img p2";
-  height: 89.2vh;
+  height: 100vh;
   width: 100%;
   position: relative;
   z-index: 1;
-  top: 75px;
+  /* top: 75px; */
   background: linear-gradient(
     90deg,
     rgba(58, 58, 58),
@@ -192,7 +192,7 @@ main {
     grid-template-areas:
       ". img ."
       "p1 carta .";
-    height: 82.4vh;
+    height: 100vh;
     top: 120px;
   }
 
