--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ main {
   margin: 0px 40px 10px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
   .header {
     display: flex;
     align-items: center;
@@ -214,5 +214,48 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: fixed;
+    padding: 10px 40px;
+    width: 100%;
+    height: 70px;
+    top: 0;
+    z-index: 2;
+    background: linear-gradient(
+      90deg,
+      rgba(58, 58, 58, 1),
+      rgba(18, 80, 206),
+      rgba(18, 80, 206),
+      rgb(58, 58, 58, 1)
+    );
+  }
+
+  .fondo {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+      ". img ."
+      "p1 carta .";
+    height: 100vh;
+    top: 60px;
+    background: linear-gradient(
+      90deg,
+      rgba(58, 58, 58, 1),
+      rgba(18, 80, 206),
+      rgba(18, 80, 206),
+      rgb(58, 58, 58, 1)
+    );
+  }
+
+  .nav {
+    display: none;
   }
 }
